# streamrip-elvigilante

./: CHANGELOG.md  README.md  config.py  config.toml  conftest.py  db.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
client/: deezer.py  tidal.py
media/: playlist.py  semaphore.py  track.py
rip/: main.py
streamrip/: config.py  config.toml  db.py  filepath_utils.py  progress.py  verify_progress.py
streamrip/client/: deezer.py  downloadable.py  qobuz.py  tidal.py
streamrip/media/: album.py  artwork.py  lyrics.py  playlist.py  track.py  video.py
streamrip/metadata/: album.py  tagger.py  track.py
streamrip/rip/: main.py
tests/: conftest.py  test_config.py  test_db.py  test_filepath_utils.py  test_semaphore.py
