[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "streamrip-elvigilante"
version = "2.2.0"
description = "A fast, scriptable music downloader for Qobuz, Tidal, Deezer, and SoundCloud — fork with enhanced reliability and security"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "nathom", email = "nathanieljthom@gmail.com"},
    {name = "djelvigilante", email = "Np3irpr@gmail.com"},
]
keywords = ["music", "downloader", "tidal", "qobuz", "deezer", "soundcloud", "flac", "audio"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "aiohttp>=3.8.0",
    "aiofiles>=22.1.0",
    "aiolimiter>=1.1.0",
    "click>=8.1.0",
    "click-help-colors>=0.9.0",
    "Pillow>=9.0.0",
    "mutagen>=1.46.0",
    "pathvalidate>=2.5.0",
    "rich>=13.0.0",
    "tomlkit>=0.11.0",
    "pycryptodomex>=3.15.0",
    "appdirs>=1.4.4",
    "m3u8>=3.3.0",
    "deezer-py>=1.3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
rip = "streamrip.rip.cli:rip"

[project.urls]
Repository = "https://github.com/Np3ir/streamrip-elvigilante"
"Bug Tracker" = "https://github.com/Np3ir/streamrip-elvigilante/issues"
"Original Project" = "https://github.com/nathom/streamrip"

# ─── Package structure ────────────────────────────────────────────────────────
# All package source lives at the repo root (flat layout).
# The mapping below tells setuptools that this root IS the "streamrip" package.
[tool.setuptools]
packages = [
    "streamrip",
    "streamrip.client",
    "streamrip.media",
    "streamrip.metadata",
    "streamrip.rip",
    "streamrip.utils",
]

[tool.setuptools.package-dir]
streamrip          = ""
"streamrip.client"   = "client"
"streamrip.media"    = "media"
"streamrip.metadata" = "metadata"
"streamrip.rip"      = "rip"
"streamrip.utils"    = "utils"

[tool.setuptools.package-data]
streamrip = ["config.toml"]

# ─── Test configuration ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths      = ["tests"]
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs  = [".git", "__pycache__", "*.egg-info", ".claude"]
addopts        = "--import-mode=importlib"

# ─── Linting ──────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
